--- a/www/index.html
+++ b/www/index.html
@@ -42,8 +42,14 @@
 
     <script src="js/tracking.js"></script>
     <script src="js/dat.gui.min.js"></script>
-    <script src="js/stats.min.js"></script>
+    <!-- <script src="js/stats.min.js"></script> -->
     <script src="js/color_camera_gui.js"></script>
+
+    <style>
+			body { margin: 0; }
+			canvas { width: 100%; height: 100% }
+		</style>
+    <script src="js/three.min.js"></script>
 
   </head>
   <body ng-app="starter">
@@ -274,6 +280,8 @@
       //         }
       //     }
       // }
+
+
 </script>
   </body>
 </html>
