--- a/www/index.html
+++ b/www/index.html
@@ -45,10 +45,8 @@
     <!-- <script src="js/stats.min.js"></script> -->
     <script src="js/color_camera_gui.js"></script>
 
-    <style>
-			body { margin: 0; }
-			canvas { width: 100%; height: 100% }
-		</style>
+    <script src="js/script.js"></script>
+
     <script src="js/three.min.js"></script>
 
   </head>
