--- a/www/index.html
+++ b/www/index.html
@@ -23,6 +23,8 @@
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
 
+    <link rel="stylesheet" href="https://i.icomoon.io/public/temp/00cf85e4ee/UntitledProject/style.css">
+
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
@@ -48,6 +50,8 @@
     <script src="js/script.js"></script>
 
     <script src="js/three.min.js"></script>
+
+    <link href="css/animate.css" rel="stylesheet">
 
   </head>
   <body ng-app="starter">
